finalizando la practica

--- a/index.html
+++ b/index.html
@@ -107,41 +107,46 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam similique accusamus esse atque, libero ex omnis veniam velit voluptatibus cupiditate harum suscipit minus id eius placeat aperiam nihil officiis quasi!</p>
     </section>
   </div>
-</main>
 <section>
 
-<h2>Contacto</h2>
-<form>
-<fieldset>
-  <legend> llena tus datos</legend>
-  <div>
-    <label> Nombre </label>
-    <input type="text" placeholder="Tu nombre">
-  </div>
+      <h2>Contacto</h2>
+    <form class="formulario">
+    <div>
+    <div class="contenedor-campos">
+      <legend> llena tus datos de contacto</legend>
+        <div class="campo">
+        <label> Nombre </label>
+        <input type="text" placeholder="Tu nombre">
+      </div>
 
-  <div>
-    <label> Telefono </label>
-    <input type="tel" placeholder="Tu telefono">
-  </div>
+      <div class="campo">
+        <label> Telefono </label>
+        <input type="tel" placeholder="Tu telefono">
+      </div>
 
-  <div>
-    <label> Correo </label>
-    <input type="email" placeholder="Tu correo">
-  </div>
+      <div class="campo">
+        <label> Correo </label>
+        <input type="email" placeholder="Tu correo">
+      </div>
 
-  <div>
-    <label> Mensaje</label>
-    <textarea></textarea>
-  </div>
+      <div class="campo">
+        <label> Mensaje</label>
+        <textarea></textarea>
+      </div>
+    </div>
 
-  <div>
-    <input type="submit" value="Enviar">
-  </div>
+      <div class="alinear-derecha flex">
+        <input class="btn-contacto-container" type="submit" value="Enviar">
 
-</fieldset>
-</form>
+      </div>
 
-</section>
-<p>Derechos Reservados © Dominguez Rivero Noe Geider 2024</p>
-</body>
-</html>
+    </fieldset>
+    </form>
+
+    </section>
+</main>
+<footer>
+    <p>Derechos Reservados © Dominguez Rivero Noe Geider 2024</p>
+  </footer>
+    </body>
+    </html>
